2013-04-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* usecode/ucinternal.cc: reverted fix for "error case of opcode CALLMS" of 
	  rev. 7363 to fix keyring in BG Keyring mod.
	
2013-02-24  Malignant Manor <malignantmanor@users.sourceforge.net>
	* Fix bug where any npcs would attack the Avatar when attack_avatar was
	  called and there are no guards in the area. Also don't have npcs with the
	  guard shape automatically attack in attack_avatar if in a dungeon.

2013-02-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/compiler/ucparse.yy: Eliminated needless sprintfs.

2013-02-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: Changed CMPG and CMPL opcodes to CMPGT and CMPLT. Fixed usecode
	  stack buffer overrun (with potentially disastrous results) implicit in the
	  CALLE/CALLE32/CALLO opcodes. This bug also caused the CALLO opcode to fail
	  for functions with parameters. Eliminated spurious output when "adding" a
	  negative number of items to the stack. Fixed bug in UCXT that caused the
	  output of -fs to not print many things in the event of a stack underflow
	  (as happens on function 0x329 in BG/FoV, function 0x91F in SI and function
	  0x939 in SS). Improved handling of CALLE/CALLE32/CALLO opcodes in UCXT.
	* docs/usecode_bugs.txt: Documented SS function 0x939 bug and its fix.
	* content/sifixes/*: Fixed bug in function 0x939.

2013-02-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/shapelst.cc: Looking for shapes within two pixels of the clicked
	  position in ES to allow selection of empty shapes.
	Rev 7363
	* Makefile.*, docs/*, msvc9/*, msvcstuff/*, tools/{Makefile.am, ucdump.c, 
	  wud.cc}, usecode/(bg|si)intrinsics.h, win32/exult_tools_installer.iss:
	  Removing wud and ucdump tools in their entirety as it is overkill to have
	  3 independent usecode disassemblers.
	* tools/wuc.c, tools/uctools.h: Added WUC support for all opcodes (until we